# py_maidr

./: .commitlintrc.js  .editorconfig  .gitignore  .nojekyll  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  c2m.py  chart.html  chart_maidr.html  example_scatter_2_layered.html  index.html  jy.html  layer_data.py  main.py  mkdocs.yml  pyproject.toml  requirements.txt  robots.txt  search.json  sitemap.xml  test.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: black.yml  build.yml  ci.yml  commit-message-lint.yml  docs.yml  main.yml  release.yml  test.yml  tox.yml
api/core/: Maidr.render.html  Maidr.save_html.html  Maidr.show.html  bar.html  box.html  close.html  count.html  heat.html  hist.html  index.html  line.html  render.html  save_html.html  scatter.html  show.html  stacked.html
docs/: .gitignore  _quarto.yml  index.md  index.qmd  modules.md
example/bar/: example_bar_plot.html  example_bar_plot.ipynb  example_bar_plot.py
example/bar/matplotlib/: example_mpl_bar_plot.html  example_mpl_bar_plot.py
example/bar/quarto/: bar.html  bar.qmd
example/bar/seaborn/: example_sns_bar_plot.html  example_sns_bar_plot.py
example/box/: example_box_plot.ipynb
example/box/matplotlib/: example_mpl_box.html  example_mpl_box.py
example/box/seaborn/: example_sns_box.html  example_sns_box.py
example/count/: example_count_plot.ipynb
example/count/seaborn/: example_sns_bar_plot.html  example_sns_count_plot.html  example_sns_count_plot.py
example/heatmap/: example_heatmap_plot.ipynb
example/heatmap/matplotlib/: example_mpl_heatmap.html  example_mpl_heatmap.py
example/heatmap/seaborn/: example_sns_heatmap.html  example_sns_heatmap.py
example/histogram/: example_histogram_plot.ipynb
example/histogram/matplotlib/: example_mpl_hist.py  example_mpl_histogram.html
example/histogram/seaborn/: example_sns_hist.py  example_sns_histogram.html
example/line/: example_line_plot.ipynb
example/line/matplotlib/: example_mpl_line.html  example_mpl_line.py
example/line/seaborn/: example_sns_line.html  example_sns_line.py
example/py-shiny/: example_pyshiny_reactive_scatter.py  example_shiny_scatter.py
example/quarto/: demo.html  demo.qmd
example/scatter/: example_scatter_2_layer.py  example_scatter_2_layered.html  example_scatter_plot.ipynb
example/scatter/matplotlib/: example_mpl_scatter.html  example_mpl_scatter.py
example/scatter/seaborn/: example_sns_scatter.html  example_sns_scatter.py
example/stacked/matplotlib/: example_mpl_stacked.html  example_mpl_stacked.py
example/stacked/seaborn/: example_sns_stacked.html  example_sns_stacked.py
example/streamlit/: example_streamlit_app.py
example/utils/: box.html  file_utils.py
maidr/: __init__.py  api.py  foo.py  layer_data.py  maidr.py  main.py  test.py
maidr/core/: __init__.py  context_manager.py  figure_manager.py  maidr.py  maidr_data.py  maidr_data_factory.py  maidr_plot.py  maidr_plot_data.py  maidr_plot_data_factory.py  maidr_plot_factory.py
maidr/core/enum/: __init__.py  library.py  maidr_key.py  plot_type.py
maidr/core/mixin/: extractor_mixin.py  merger_mixin.py
maidr/core/plot/: __init__.py  bar_data.py  bar_plot.py  bar_plot_data.py  barplot.py  box_plot.py  boxplot.py  grouped_bar_plot.py  grouped_barplot.py  heat_plot.py  heat_plot_data.py  heatmap.py  hist_plot.py  hist_plot_data.py  histogram.py  line_plot.py  line_plot_data.py  lineplot.py  maidr_plot.py  maidr_plot_factory.py  scatter_plot.py  scatterplot.py
maidr/core/plot_data/: box_plot_data.py  scatter_plot_data.py  stacked_plot_data.py
maidr/example/: tutorial1_bar_plot.html
maidr/exception/: __init__.py  extraction_error.py
maidr/patch/: barplot.py  boxplot.py  clear.py  common.py  heatmap.py  highlight.py  histogram.py  lineplot.py  scatterplot.py
maidr/util/: environment.py  server.py
maidr/util/mixin/: extractor_mixin.py
maidr/utils/: environment.py  figure_manager.py
maidr/utils/mixin/: __init__.py  extractor_mixin.py  merger_mixin.py
maidr/widget/: shiny.py
tests/: conftest.py  test_foo.py
tests/core/: test_figure_manager.py  test_maidr_plot.py  test_maidr_plot_data.py  test_maidr_plot_data_factory.py  test_maidr_plot_factory.py
tests/core/enum/: library.py
tests/core/plot/: test_bar_plot.py  test_bar_plot_data.py  test_barplot.py  test_boxplot.py
tests/fixture/: library_factory.py  matplotlib_factory.py  seaborn_factory.py
tests/utils/: test_figure_manager.py
