[tool.poetry]
name = "maidr"
description = "Multimodal Access and Interactive Data Representations"
readme = "README.md"
keywords = ["accessibility", "visualization", "sonification", "braille", "tactile", "multimodal", "data representation", "blind", "low vision", "visual impairments"]
license = "GPL-3.0-or-later"
authors = [
  "JooYoung Seo <jseo1005@illinois.edu>",
  "Saairam Venkatesh <saairam2@illinois.edu>"
]
version = "0.1.1"
classifiers = [
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Healthcare Industry",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing :: Markup :: HTML",
  "Topic :: Scientific/Engineering :: Visualization"
]

[project.urls]
homepage = "https://github.com/xability/py_maidr"


[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.7.1"
numpy = "^1.24.3"
seaborn = "^0.13.2"
lxml = "^5.1.0"
htmltools = ">=0.5.1"


[tool.poetry.group.dev.dependencies]
black = "23.3.0"
sphinx = "^7.0.1"
pre-commit = "^3.3.2"
pytest = "^7.3.2"
python-semantic-release = "^8.7.0"
pytest-mock = "^3.12.0"
tox = "^4.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.semantic_release]
branch = "main"
version_variable = "maidr/__init__.py:__version__"
upload_to_pypi = "true"
upload_to_release = "true"
